# Task_Manager_API

./: .dockerignore  .env-example  .gitattributes  .gitignore  Dockerfile.dev  Dockerfile.prod  Makefile  README.dev.md  README.md  README.prod.md  compose.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-entrypoint.dev.sh  docker-entrypoint.prod.sh  docker-entrypoint.sh  prometheus.prod.yml  pyproject.toml  run.py
batch_process/: __init__.py  bucket.py  manager.py
documentation/: New_Improvements.md  README.dev.md  README.prod.md  lesson_learned.md
flask_task_manager/: __init__.py  config.py  logging_config.py  models.py  schemas.py  utils.py
flask_task_manager/auth/: routes.py
flask_task_manager/mail_service/: __init__.py  fake_service.py  real_service.py
flask_task_manager/tasks/: routes.py
middleware/: rate_limiter.py
migrations/versions/: 3abbeadfe6c2_auto_migration.py  5a0f40701190_auto_migration.py  b028ec93e41b_auto_migration.py  bf99cda9442b_auto_migration.py  c10249dd9c94_initial_migration.py  c44629d1e0c5_auto_migration.py  d444364ca899_initial_migration.py  d73d69739cf5_auto_migration.py
nginx_config/: README.md  base.conf  myapp.conf
prometheus_data_prod/wal/: 00000000  00000001
task_manager_api/: __init__.py  config.py  error_handler.py  models.py  schemas.py  utils.py
task_manager_api/auth/: routes.py
task_manager_api/docs/: routes.py
task_manager_api/extensions/: redis_client.py
task_manager_api/mail_service/: real_service.py
task_manager_api/static/: openapi.yaml
tests/: test_reset_password.py  test_task.py
(+13 files in other folders)
